replaced "new Float(d)" with "Float.valueOf(d)" and Integer analogon