@@ -70,7 +70,7 @@ public class BufferedImageTranscoder extends ImageTranscoder {
      * @param height.
      */
     public void setDimensions(int width, int height) {
-        hints.put(KEY_WIDTH, new Float(width));
-        hints.put(KEY_HEIGHT, new Float(height));
+        hints.put(KEY_WIDTH, Float.valueOf(width));
+        hints.put(KEY_HEIGHT, Float.valueOf(height));
         }
     }
